# LEO-Satellite-Routing-Optimization-Implementation

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: constellation.yaml  ga_params.yaml
data/processed/: results_1778805776.json  results_1778821463.json
docker/: Dockerfile  docker-compose.yml
examples/: run_98_node_sim.py
src/core_engine/: bindings.cpp
src/core_engine/include/: beckmann_math.hpp  constraints.hpp
src/core_engine/src/: beckmann_math.cpp  constraints.cpp
src/optimization/: fitness_metrics.py  genetic_algo.py
src/routing/: graph_manager.py  snapshot_engine.py
src/visualization/: animator.py  routes_and_schedule_vis.py
tests/python/: test_fitness_metrics.py  test_genetic_algo.py  test_graph_manager.py  test_snapshot_engine.py
